--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "16.1.6",
     "openai": "^6.25.0",
     "radix-ui": "^1.4.3",
+    "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "stripe": "^20.4.0",
